se arreglo bug del menu en version mobile

--- a/src/components/side-bar/BurguerButton.module.css
+++ b/src/components/side-bar/BurguerButton.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    top: 0;
 }
 
 .burguer-line {
